- (FEAT) keep creation and modification times with each object
- (FEAT) added ppc imports and arches to supplement s390x (and assoc koan chage)
- (FEAT) added number of interfaces required to each image
- (BUGF) fix for possible import of insecure modules by Cheetah in Cobbler web.
- (FEAT) new version function
- (FEAT) misc WUI organization
- (FEAT) allow auth against multiple LDAP servers

- Fri Sep 26 2008 - 1.2.5
- (BUGF) expose --arch for "cobbler image add"
- (BUGF) unbreak dnsmasq DHCP management, similar to ISC bug
- (BUGF) fix --arch for cobbler distro add/edit
- (BUGF) fix merge error with remote.py's remove_profile function (fix webapp)
- (BUGF) makekeep_updated and mirror_locally checkboxes in WebUI display correctly

- Mon Sep 08 2008 - 1.2.4
- (BUGF) simple rebuild to remove cli_report.py, which is not in git

- Sun Sep 07 2008 - 1.2.3
- (BUGF) fix to manage_isc.py code

- Fri Sep 05 2008 - 1.2.2
- (BUGF) fix to where elilo location is loaded in manage_isc.py
- (BUGF) populate netboot_enabled in WebUI correctly
- (BUGF) make RPM own some unowned directories in "triggers"
- (BUGF) add named_conf setting to settings

- Tue Sep 02 2008 - 1.2.1
- (BUGF) fix merge problem with 1.2 

- Fri Aug 29 2008 - 1.2.0
- (FEAT) All development work from 1.X merged in
- (FEAT) when --netboot-enabled is toggled, rather than deleting the PXE config, create a local boot PXE config
- (BUGF) disable some s390 aspects of cobbler check until it is supported
- (FEAT) new --os-version, better validation for --breed, --breed/--os-version also for images

- ??? - 1.1.1
- (FEAT) make template replacement use regex module
- (BUGF) remove bootloader check in settings as that code doesn't need it
- (BUGF) refinements to image handling
- (FEAT) getks command added to command line
- (BUGF) don't print traceback during certain SystemExits
- (BUGF) --help now works more intuitively on odd command line usage
- (BUGF) use pxesystem for systems, not pxeprofile